--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>tgshop-mybatis-generator</module>
         <module>tgshop-auth-api</module>
         <module>tgshop-auth-service</module>
+        <module>tgshop-product-service</module>
+        <module>tgshop-manager-seller</module>
     </modules>
 
     <parent>
