--- a/tgshop-product-service/pom.xml
+++ b/tgshop-product-service/pom.xml
@@ -34,9 +34,10 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.opec.shop</groupId>
-            <artifactId>opec-shop-core</artifactId>
-            <version>1.1-SNAPSHOT</version>
+            <groupId>com.tg.shop.cloud</groupId>
+            <artifactId>tgshop-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
