--- a/tgshop-auth-service/src/main/resources/application.yml
+++ b/tgshop-auth-service/src/main/resources/application.yml
@@ -12,9 +12,9 @@ spring:
 
   #datasource
   datasource:
-    url: jdbc:mysql://localhost:3306/tgshop-cloud?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+    url: jdbc:mysql://localhost:3306/tgshop_cloud?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
     username: root
-    password: 1123456
+    password: 123456
 
 eureka:
   client:
