--- a/tgshop-manager-seller/pom.xml
+++ b/tgshop-manager-seller/pom.xml
@@ -38,6 +38,10 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.tg.shop.cloud</groupId>
             <artifactId>tgshop-core</artifactId>
             <version>1.0-SNAPSHOT</version>
