--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,7 @@
         <fastjson.version>1.2.58</fastjson.version>
         <mybatis.version>1.3.2</mybatis.version>
         <lombok.version>1.18.8</lombok.version>
-        <io.swagger.version>1.5.22</io.swagger.version>
-        <swagger.version>1.8.0.RELEASE</swagger.version>
+        <swagger.version>2.9.2</swagger.version>
         <commons-io.version>2.6</commons-io.version>
         <pagehelper.version>5.1.8</pagehelper.version>
         <mybatis.spring.boot.version>1.3.2</mybatis.spring.boot.version>
@@ -70,10 +69,16 @@
                 <version>${lombok.version}</version>
                 <scope>provided</scope>
             </dependency>
+            <!-- swagger2 -->
             <dependency>
-                <groupId>io.swagger</groupId>
-                <artifactId>swagger-annotations</artifactId>
-                <version>1.5.22</version>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>${swagger.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger-ui</artifactId>
+                <version>${swagger.version}</version>
             </dependency>
 
             <!-- 阿里云 oss -->
