--- a/tgshop-mq-service/src/main/resources/application.yml
+++ b/tgshop-mq-service/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     host: 192.168.116.128
     port: 6379
 
-  #datasource
+  # datasource mysql
   datasource:
     url: jdbc:mysql://localhost:3306/tgshop_cloud?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
     username: root
@@ -18,6 +18,10 @@ spring:
 
   # rabbitmq
   rabbitmq:
+    host: 192.168.116.128
+    port: 5672
+    username: admin
+    password: admin
     publisher-confirms: true
     publisher-returns: true
     # 开启ACK
@@ -36,3 +40,7 @@ generator:
   snowflake:
     worker-id: 1
     data-center: 1
+
+tgshop:
+  swagger:
+    enable: true
