--- a/tgshop-product-service/pom.xml
+++ b/tgshop-product-service/pom.xml
@@ -46,6 +46,10 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.tg.shop.cloud</groupId>
             <artifactId>tgshop-cloud-core</artifactId>
             <version>1.0-SNAPSHOT</version>
