--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
         <module>tgshop-mq-service</module>
         <module>tgshop-trade-service</module>
         <module>tgshop-search-service</module>
+        <module>tgshop-mq-consumer-service</module>
+        <module>tgshop-mq-producer-service</module>
     </modules>
 
     <parent>
