--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <module>tgshop-manager-seller</module>
         <module>tgshop-zuul-seller</module>
         <module>tgshop-categories-service</module>
-        <module>tgshop-mq-service</module>
+<!--        <module>tgshop-mq-service</module>-->
         <module>tgshop-trade-service</module>
         <module>tgshop-search-service</module>
         <module>tgshop-mq-consumer-service</module>
