--- a/tgshop-mq-service/src/main/resources/application.yml
+++ b/tgshop-mq-service/src/main/resources/application.yml
@@ -15,6 +15,9 @@ spring:
     url: jdbc:mysql://localhost:3306/tgshop_cloud?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
     username: root
     password: 123456
+  #jackson
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
 
   # rabbitmq
   rabbitmq:
