--- a/tgshop-mq-consumer-service/pom.xml
+++ b/tgshop-mq-consumer-service/pom.xml
@@ -58,6 +58,17 @@
             <artifactId>tgshop-cloud-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- aliyun 大于短信 -->
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>aliyun-java-sdk-core</artifactId>
+            <version>4.0.6</version>
+        </dependency>
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>aliyun-java-sdk-dysmsapi</artifactId>
+            <version>1.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
