--- a/tgshop-mq-producer-service/pom.xml
+++ b/tgshop-mq-producer-service/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>tgshop-cloud-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
