订单 收货地址

--- a/tgshop-trade-service/src/main/resources/application.yml
+++ b/tgshop-trade-service/src/main/resources/application.yml
@@ -39,3 +39,12 @@ generator:
 tgshop:
   swagger:
     enable: true
+
+# mybatis sql 日志
+logging:
+  level:
+    com:
+      tg:
+        shop:
+          trade:
+            mapper: debug
