订单 -- 保存订单  确认订单  拆单

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
         <module>tgshop-mq-consumer-service</module>
         <module>tgshop-mq-producer-service</module>
         <module>tgshop-trade-service</module>
+        <module>tgshop-zuul-vant</module>
+        <module>tgshop-vant-api</module>
     </modules>
 
     <parent>
