--- a/tgshop-upload-service/src/main/resources/application.yml
+++ b/tgshop-upload-service/src/main/resources/application.yml
@@ -5,6 +5,11 @@ spring:
   application:
     name: tgshop-fileUpload
 
+  #redis
+  redis:
+    host: 192.168.116.128
+    port: 6379
+
   #datasource
   datasource:
     url: jdbc:mysql://localhost:3306/tgshop_cloud?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
